--- a/app/static/giscus.css
+++ b/app/static/giscus.css
@@ -90,6 +90,7 @@ main {
 	/*! Extensions from @primer/css/alerts/flash.scss */
 	--color-social-reaction-bg-hover: var(--color-scale-gray-1);
 	--color-social-reaction-bg-reacted-hover: var(--color-scale-blue-1);
+	font-family: "Helvetica", sans-serif;
 }
 
 main .pagination-loader-container {
