--- a/app/src/lib/styles/style.css
+++ b/app/src/lib/styles/style.css
@@ -17,8 +17,14 @@ html {
 	/* --bg-color: 255, 255, 255;
 	--text-color: 124, 62, 82; */
 
-	--bg-color: 255, 248, 225;
-	--text-color: 107, 80, 0;
+	--bg-color-dark: 68, 51, 0;
+	--text-color-dark: 166, 135, 40;
+
+	--bg-color-light: 255, 248, 225;
+	--text-color-light: 107, 80, 0;
+
+	--bg-color: var(--bg-color-light);
+	--text-color: var(--text-color-light);
 
 	--border-color: inherit;
 
@@ -397,7 +403,22 @@ picture {
 	html {
 		/* --bg-color: 46, 23, 30;
 		--text-color: 199, 144, 162; */
-		--bg-color: 68, 51, 0;
-		--text-color: 166, 135, 40;
+		/* --bg-color: 68, 51, 0;
+		--text-color: 166, 135, 40; */
+
+		--bg-color: var(--bg-color-dark);
+		--text-color: var(--text-color-dark);
+	}
+}
+@media (prefers-color-scheme: light) {
+	:root,
+	html {
+		/* --bg-color: 46, 23, 30;
+		--text-color: 199, 144, 162; */
+		/* --bg-color: 68, 51, 0;
+		--text-color: 166, 135, 40; */
+
+		--bg-color: var(--bg-color-light);
+		--text-color: var(--text-color-light);
 	}
 }
