--- a/app/src/lib/styles/style.css
+++ b/app/src/lib/styles/style.css
@@ -47,8 +47,28 @@ body {
 	padding: 0.5rem 0.5rem 1.5rem;
 	/* padding: 4px; */
 	color: rgb(var(--text-color));
-	background-color: rgb(var(--bg-color));
+	/* background-color: rgb(var(--bg-color)); */
 	text-wrap: pretty;
+	background:
+		url("/ui/flowers-bottom.svg") top 100vh right 0.5rem / 96px repeat-y,
+		rgb(var(--bg-color));
+	max-width: calc(100vw - 96px - 1rem);
+}
+.flowers-top {
+	overflow: hidden;
+	z-index: -1; /* layer below everything else */
+
+	/* position whole div to top left
+  and take up 100% of viewport*/
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+
+	background:
+		url("/ui/flowers-top.svg") bottom 0 right 0.5rem / 96px no-repeat,
+		rgb(var(--bg-color));
 }
 
 /* :::::::::::::::::::::::::::::::::: */
@@ -423,26 +443,54 @@ picture {
 		--bg-color: var(--bg-color-dark);
 		--text-color: var(--text-color-dark);
 	}
-	/* a.button,
-	button {
-		background: linear-gradient(
-				to top,
-				rgba(var(--text-color), 0) 33%,
-				rgba(var(--text-color), 0.2) 100%
-			),
+	body {
+		background:
+			url("/ui/flowers-bottom-dark.svg") top 100vh right 0.5rem / 96px repeat-y,
 			rgb(var(--bg-color));
 	}
-	a.button:hover,
-	button:hover {
-		background: linear-gradient(
-				to bottom,
-				rgba(var(--text-color), 0.2) 33%,
-				rgba(var(--text-color), 0.6) 100%
-			),
+	.flowers-top {
+		overflow: hidden;
+		z-index: -1; /* layer below everything else */
+
+		/* position whole div to top left
+  and take up 100% of viewport*/
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 100vh;
+
+		background:
+			url("/ui/flowers-top-dark.svg") bottom 0 right 0.5rem / 96px no-repeat,
 			rgb(var(--bg-color));
-	} */
+	}
 }
-@media (prefers-color-scheme: light) {
+@media (max-width: 897px) {
+	body {
+		background: rgb(var(--bg-color));
+		max-width: 100vw;
+		padding-bottom: 0;
+		background:
+			url("ui/bg.svg") top 0 left 0 / 100% calc(100% - 128px) no-repeat,
+			url("/ui/flowers-bottom.svg") top calc(100% + 128px) right 0.5rem / 96px
+				repeat-y,
+			rgb(var(--bg-color));
+	}
+	article {
+		max-width: 100vw;
+		padding-bottom: 1rem;
+	}
+	.flowers-top {
+		position: relative;
+		/* z-index: 10000000000; */
+		height: 128px;
+		width: 100%;
+		background:
+			url("/ui/flowers-top.svg") bottom right / 96px no-repeat,
+			rgb(var(--bg-color));
+	}
+}
+@media (max-width: 897px) and (prefers-color-scheme: dark) {
 	:root,
 	html {
 		/* --bg-color: 46, 23, 30;
@@ -450,7 +498,30 @@ picture {
 		/* --bg-color: 68, 51, 0;
 		--text-color: 166, 135, 40; */
 
-		--bg-color: var(--bg-color-light);
-		--text-color: var(--text-color-light);
+		--bg-color: var(--bg-color-dark);
+		--text-color: var(--text-color-dark);
+	}
+	body {
+		background: rgb(var(--bg-color));
+		max-width: 100vw;
+		padding-bottom: 0;
+		background:
+			url("ui/bg-dark.svg") top 0 left 0 / 100% calc(100% - 128px) no-repeat,
+			url("/ui/flowers-bottom-dark.svg") top calc(100% + 128px) right 0.5rem /
+				96px repeat-y,
+			rgb(var(--bg-color));
+	}
+	article {
+		max-width: 100vw;
+		padding-bottom: 1rem;
+	}
+	.flowers-top {
+		position: relative;
+		/* z-index: 10000000000; */
+		height: 128px;
+		width: 100%;
+		background:
+			url("/ui/flowers-top-dark.svg") bottom right / 96px no-repeat,
+			rgb(var(--bg-color));
 	}
 }
