--- a/app/src/lib/styles/style.css
+++ b/app/src/lib/styles/style.css
@@ -471,7 +471,7 @@ picture {
 		max-width: 100vw;
 		padding-bottom: 0;
 		background:
-			url("ui/bg.svg") top 0 left 0 / 100% calc(100% - 128px) no-repeat,
+			url("/ui/bg.svg") top 0 left 0 / 100% calc(100% - 128px) no-repeat,
 			url("/ui/flowers-bottom.svg") top calc(100% + 128px) right 0.5rem / 96px
 				repeat-y,
 			rgb(var(--bg-color));
@@ -506,7 +506,7 @@ picture {
 		max-width: 100vw;
 		padding-bottom: 0;
 		background:
-			url("ui/bg-dark.svg") top 0 left 0 / 100% calc(100% - 128px) no-repeat,
+			url("/ui/bg-dark.svg") top 0 left 0 / 100% calc(100% - 128px) no-repeat,
 			url("/ui/flowers-bottom-dark.svg") top calc(100% + 128px) right 0.5rem /
 				96px repeat-y,
 			rgb(var(--bg-color));
