--- a/app/src/lib/styles/style.css
+++ b/app/src/lib/styles/style.css
@@ -409,6 +409,9 @@ picture {
 	max-width: 100%;
 	height: auto;
 }
+article img {
+	width: 100%;
+}
 :is(h1, h2, h3, h4, h5, h6, p) + :is(img, picture, div, figure) {
 	margin-top: 2ex;
 }
